--- a/sdaia-html/02-Html-Form.html
+++ b/sdaia-html/02-Html-Form.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Form</title>
+    <link rel="stylesheet" href="/sdaia-css/01-mystyle.css">
 </head>
+
 <body>
+<h1>Form</h1>
 
 <form action="03-welcom-Form.html">
     <label> User Name: </label>
@@ -22,7 +25,7 @@
 
     <br/> <br/>
 
-    <input type="submit" value="Send">
+    <input type="submit" value="Send"/>
 </form>
 
 </body>
